tests/fixtures/positive/release-engineering/PrintlnInProduction.kt
package com.example.releaseengineering

class UserService {
    fun load() {
        println("loading")
    }
}
