tests/fixtures/negative/naming/PackageNaming.kt
package com.example.good

class PackageNamingExample {
    fun doWork() {}
}
